Fixed whitespace issue

--- a/src/components/BasicCard/BasicCard.css
+++ b/src/components/BasicCard/BasicCard.css
@@ -5,6 +5,5 @@
     align-items: center;
     width: 100%;
     text-align: center ;
-    font-size: 0;
 }
 
